--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "chart.js": "^3.7.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "typescript": "^4.9.5"
   },
   "type": "module"
  }
